@@ -1,3 +1,47 @@
-てすと
+.. role:: antique1
 
-That should be 3 japanese characters.
+.. role:: antique2
+
+.. role:: antique3
+
+.. role:: tuffy1
+
+.. role:: tuffy2
+
+.. role:: tuffy3
+
+.. role:: tuffy4
+
+.. role:: tuffy5
+
+.. role:: tuffy6
+
+.. role:: tuffy7
+
+.. role:: tuffy8
+
+The following 3 lines should be japanese
+
+:antique1:`てすと` 
+
+:antique2:`てすと` 
+
+:antique3:`てすと` 
+
+:tuffy1:`Tuffy regular`
+
+:tuffy2:`Tuffy italic`
+
+:tuffy3:`Tuffy bold`
+
+:tuffy4:`Tuffy bold italic`
+
+:tuffy5:`Tuffy regular`
+
+:tuffy6:`Tuffy italic`
+
+:tuffy7:`Tuffy bold`
+
+:tuffy8:`Tuffy bold italic`
+
+
